# jenkins-update-mod

./: .gitignore  Cargo.toml
config/: config.toml  log_config.yml  log_mod.yml  log_sync.yml  mod.toml  sync.toml
src/: jenkins-mod-main.rs  jenkins-sync-main.rs  main.rs
